# matrix_comparison

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py  conanfile.txt  vcpkg.json
MatrixComparison/: Manifest.toml  Project.toml
MatrixComparison/src/: MatrixComparison.jl
analysis/: plot_results.jl  plot_results.py
configured_files/: CMakeLists.txt  config.hh.in
src/: CMakeLists.txt  blaze_tests.cpp  eigen_decomp.cpp  eigen_tests.cpp  eigen_tests.hpp  gsl_tests.cpp  gsl_tests.hpp  main.cpp  parametres.hpp  test_runner.cpp  test_runner.hpp  xtensor_tests.cpp
src/arma/: CMakeLists.txt  arma_test.cpp  arma_test.hpp
src/blaze/: CMakeLists.txt  blaze_tests.cpp  blaze_tests.hpp
src/eigen/: CMakeLists.txt  eigen_tests.cpp  eigen_tests.hpp
src/gsl/: CMakeLists.txt  gsl_tests.cpp  gsl_tests.hpp
src/parameters/: CMakeLists.txt  parameters.hpp
src/xtensor/: xtensor_tests.cpp  xtensor_tests.hpp
test/: CMakeLists.txt
